# libserialport

./: .gitignore  CMakeLists.txt  Makefile.am  classes.cpp  config.h.cmake  configure.ac  libserialport.h.cmake  libserialport.h.in  libserialport_internal.h  libserialportcxx.hpp  libserialportcxx.pc.in  linux.c  macosx.c  serialport.c  windows.c
cmake/: CheckMacro.cmake  FindSerialport.cmake
